<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:title="@string/newTask"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        app:layout_constraintGuide_begin="32dp"
        android:id="@+id/guide_start"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        app:layout_constraintGuide_end="32dp"
        android:id="@+id/guide_end"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/titleHint">


        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/titleInput"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:gravity="top"
            android:hint="@string/newDesc"
            android:maxLines="4"
            android:lines="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateMenu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/descInput"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/timeMenu"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pickDate"
        app:startIconDrawable="@drawable/ic_calendar">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="none"
            android:focusable="false"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeMenu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/selectTime"
        app:layout_constraintTop_toTopOf="@id/dateMenu"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/dateMenu"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@+id/createTaskBtn"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createTaskBtn"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/createBtn"
        android:textAllCaps="false"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>